<resources>
  <string name="app_name">CyberDune</string>
  <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
  <string name="expo_splash_screen_status_bar_translucent" translatable="false">false</string>
  <string name="expo_system_ui_user_interface_style" translatable="false">light</string>
  <string name="title_activity_home">HomeActivity</string>
  <string name="title_event">Events</string>
  <string name="title_home">Home</string>
  <string name="title_connections">Connections</string>
  <string name="title_message">Message</string>
  <string name="title_post">Posts</string>
  <string name="title_organization">Organizations</string>
  <string name="title_me">Me</string>
  <string name="title_explore_events">Explore</string>
  <string name="title_event_all">Events</string>
  <string name="title_event_following">My Following</string>
  <string name="title_individual">Individual</string>
  <string name="event_detail_participants">PARTICIPANTS</string>
  <string name="event_detail_where">WHERE</string>
  <string name="event_detail_when">WHEN</string>
  <string name="event_detail_what">WHAT</string>
  <string name="event_detail_raffle">RAFFLE</string>
  <string name="event_detail_raffle_requirements">Requirements</string>
  <string name="event_detail_raffle_code">About The Code</string>
  <string name="event_detail_raffle_confirm">Confirm</string>
  <string name="event_detail_raffle_joined">Joined</string>
  <string name="event_detail_raffle_end">Raffle Ended</string>
  <string name="event_detail_raffle_claim">Claim Now</string>
  <string name="event_detail_raffle_lose">You did NOT win the raffle.</string>
  <string name="event_detail_raffle_not_attend">Sorry, you didn’t attend the event and stayed for at least 10 minutes, so you were not entered into the raffle.</string>
  <string name="event_detail_raffle_rate_limit">Rate limit reached: 2 verifications/min. Please try again later.</string>
  <string name="event_detail_raffle_requirements_not_met">Please fulfill all the raffle requirements before joining the raffle.</string>
  <string name="event_detail_raffle_win">Congratulations! You won the raffle!</string>
  <string name="event_detail_raffle_claiming_another">You are claiming another raffle. Please try again later.</string>
  <string name="event_detail_raffle_joined_hint">You have successfully joined the raffle!</string>
  <string name="event_detail_raffle_hint">Tweet the event page link before the event start to join the raffle! Winners will be announced after the event. By joining the raffle you will auto-register this event.</string>
  <string name="event_detail_speakers">SPEAKERS</string>
  <string name="event_detail_organizer">ORGANIZER</string>
  <string name="event_detail_location_copied">The content has been copied to the clipboard!</string>
  <string name="event_add_to_calendar">Add To Calendar</string>
  <string name="event_add_to_calendar_ended">Event Ended</string>
  <string name="event_add_to_calendar_not_logged">Connect Wallet &amp; Add To Calendar</string>
  <string name="event_view_in_calendar">View in My Events</string>
  <string name="event_detail_claim_w3st">Claim Web3 Status Token (WΞST) 🔥</string>
  <string name="link_twitter_title">Link Your Twitter</string>
  <string name="link_twitter">Link Twitter</string>
  <string name="link_twitter_hint">We have just upgrade our authentication method. Please authenticate your Twitter again for better user experience.</string>
  <string name="event_detail_claim_w3st_not_ready">Token will be available to claim after the event</string>
  <string name="event_detail_claim_w3st_ready">The token is available to claim now</string>
  <string name="event_detail_claim_w3st_network">Network</string>
  <string name="event_detail_claim_w3st_contract">Contract Address</string>
  <string name="event_detail_claim_w3st_mode">Mode</string>
  <string name="event_detail_claim_w3st_claimed">Claimed</string>
  <string name="event_detail_claim_w3st_claim">Claim</string>
  <string name="event_detail_claim_w3st_not_logged">Connect Wallet &amp; Claim</string>
  <string name="event_detail_raffle_not_logged">Connect Wallet &amp; Confirm</string>
  <string name="event_detail_claim_w3st_gas">Gas</string>
  <string name="event_detail_claim_w3st_gasless">Gasless</string>
  <string name="event_detail_claim_w3st_requirement">Claim Requirements</string>
  <string name="claim_w3st_step1">STEP1</string>
  <string name="claim_w3st_step2">STEP2</string>
  <string name="claim_w3st_step3">STEP3</string>
  <string name="claim_w3st">Claim W3ST 🔥</string>
  <string name="claim_w3st_gas_credit">Check SmartGas</string>
  <string name="claim_w3st_not_eligible">You are NOT eligible,\nplease check the requirements above</string>
  <string name="event_detail_claim_w3st_requirement_not_meet">You do NOT meet this requirement.</string>
  <string name="event_detail_claim_w3st_kyc_title">KYC Token</string>
  <string name="event_detail_claim_w3st_kyc_hint">The KYC(Know Your Customer) token is a non-transferable token representing the token holder has passed KYC verification.\nCurrently, we support Binance Account Bound(BAB) token. Any Binance KYC user can request to issue a BAB token to their wallet. Instructions can be found [here](https://www.binance.com/en/support/faq/how-to-mint-binance-account-bound-bab-token-bacaf9595b52440ea2b023195ba4a09c).</string>
  <string name="event_detail_claim_w3st_requirement_twitter">Due to the limitation of Twitter API, Link3 can only track up to 1,000 concurrent users on mobile. If you joined the Twitter Space on web or there are too many people in the space, you may not be able to meet the requirement for claiming the token.</string>
  <string name="event_detail_claim_w3st_requirement_stay">Your eligibility will be checked after the event.</string>
  <string name="post_card_collected">Collected</string>
  <string name="post_detail_collection_hint">This entry has been permanently stored on-chain.</string>
  <string name="post_detail_collection_author">AUTHOR’S CYBERPROFILE</string>
  <string name="post_detail_collection_content_id">CONTENT ID</string>
  <string name="post_detail_collection_arweave_transaction">ARWEAVE TRANSACTION</string>
  <string name="post_detail_collection_nft_address">NFT ADDRESS</string>
  <string name="post_detail_minting_price">Price</string>
  <string name="post_detail_sold_out">Sold Out</string>
  <string name="post_detail_collect_post">Collect Post</string>
  <string name="post_detail_approve">Approve</string>
  <string name="post_detail_quiz">Do Quiz to Collect Post</string>
  <string name="post_detail_quiz_next">Next</string>
  <string name="post_detail_quiz_submit">Submit</string>
  <string name="post_detail_quiz_rate_limit">Submission is too frequent. Please wait 30 seconds and try again.</string>
  <string name="post_detail_quiz_wrong_prompt">Sorry, your answer is incorrect. Please review your response and try again.</string>
  <string name="post_detail_collected">Collected</string>
  <string name="post_detail_minting_free">Minting is free</string>
  <string name="post_detail_comment_hint">Leave a comment...</string>
  <string name="show_more_replies">Show more replies</string>
  <string name="org_followed">Following</string>
  <string name="org_unfollowed">Follow</string>
  <string name="profile_welcom_title">Welcome to Link3</string>
  <string name="profile_app_description">Discover Web3 Content, Profiles, and Events!</string>
  <string name="profile_connect_wallet">Connect Wallet</string>
  <string name="profile_disconnect">Disconnect</string>
  <string name="setting_title">Setting</string>
  <string name="setting_email">Email</string>
  <string name="setting_twitter">Twitter</string>
  <string name="setting_discord">Discord</string>
  <string name="setting_telegram">Telegram</string>
  <string name="setting_link">Link</string>
  <string name="setting_unlink">Unlink</string>
  <string name="setting_link_email">Link your email</string>
  <string name="setting_link_telegram">Link your Telegram</string>
  <string name="setting_unlink_email">Unlink Email</string>
  <string name="setting_unlink_telegram">Unlink Telegram</string>
  <string name="setting_unlink_email_hint">Are you sure you want to unlink your email from link3?</string>
  <string name="setting_connect_twitter">Connect Twitter</string>
  <string name="setting_connect_twitter_hint">Link your Twitter account</string>
  <string name="setting_disconnect_twitter">Disconnect Twitter</string>
  <string name="setting_disconnect_twitter_hint">Are you sure you want to disconnect your twitter from link3?</string>
  <string name="setting_disconnect_linkedin_hint">Are you sure you want to disconnect your linkedin from link3?</string>
  <string name="setting_disconnect_telegram_hint">You will no longer receive message notifications through Telegram, are you sure you want to unlink your Telegram?</string>
  <string name="setting_connect_discord">Connect Discord</string>
  <string name="setting_connect_discord_hint">Link your Discord account</string>
  <string name="setting_disconnect_discord">Disconnect Discord</string>
  <string name="setting_disconnect_github">Disconnect Github</string>
  <string name="setting_disconnect_linkedin">Disconnect LinkedIn</string>
  <string name="setting_linkedin_expired">Auth is expired</string>
  <string name="email_input_hint">Enter email here</string>
  <string name="send_verification">Send Verification</string>
  <string name="invalid_email">Invalid email format</string>
  <string name="invalid_email_suffix">Please use the email of your org</string>
  <string name="email_code">We just mail you a code</string>
  <string name="email_code_input_hint">Enter verification code</string>
  <string name="email_code_invalid">Invalid code</string>
  <string name="setting_disconnect_discord_hint">Are you sure you want to disconnect your discord from link3?</string>
  <string name="setting_disconnect_github_hint">Are you sure you want to disconnect your github from link3?</string>
  <string name="claim_w3st_connect_discord_hint">Please connect your Discord to check your eligibility.</string>
  <string name="claim_w3st_connect_twitter_hint">Please connect your Twitter to check your eligibility.</string>
  <string name="w3st_title">W3ST</string>
  <string name="w3st_available">Available to Claim</string>
  <string name="get_more_w3st">Get More W3ST</string>
  <string name="what_is_w3st">What is W3ST?</string>
  <string name="my_w3st_hint">Web3 Status Token (WΞST) is a ERC-721 token representing your Web3 on-chain status. You can claim a W3ST by joining a Link3 event.</string>
  <string name="login_verify_account">Verify your account</string>
  <string name="login_verify_send_message">Send message</string>
  <string name="login_verify_cancel">Cancel</string>
  <string name="login_verify_hint">To finish connecting, you must sign a message in your wallet to verify that you are the owner of this account.</string>
  <string name="wallet_app_suggested">Suggested</string>
  <string name="wallet_app_metamask">MetaMask</string>
  <string name="external_wallet">External wallet</string>
  <string name="wallet_app_walletconnect">WalletConnect</string>
  <string name="wallet_app_rainbow">Rainbow</string>
  <string name="empty_event">There is no event yet</string>
  <string name="empty_page">Nothing here</string>
  <string name="empty_connection">There is no profile yet</string>
  <string name="empty_post">There is no post yet</string>
  <string name="label_close_button">Close Button</string>
  <string name="amount">Amount</string>
  <string name="address">Address</string>
  <string name="amount_hint">Enter amount</string>
  <string name="eth">ETH</string>
  <string name="passkey_login">Sign in with your passkey</string>
  <string name="passkey_last_step">One Last Step!</string>
  <string name="passkey_authenticate_confirm">Confirm Authentication</string>
</resources>