<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="32dp"
    android:paddingTop="@dimen/page_general_padding"
    android:paddingStart="@dimen/page_general_padding"
    android:paddingEnd="@dimen/page_general_padding"
    android:background="@color/window_background"
    >

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="@dimen/back_icon_size"
        android:layout_height="@dimen/back_icon_size"
        android:src="@drawable/icon_close"
        android:scaleType="centerInside"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/label_close_button"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="?android:attr/textColorPrimary"
        android:text="@string/passkey_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/icon_faceid"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/icon_faceid"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/last_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/primary_text_color"
        android:text="@string/passkey_last_step"
        app:layout_constraintTop_toBottomOf="@id/icon_faceid"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.cyberconnect.link3.ui.LoadingButton
        android:id="@+id/authenticate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/action_button_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_step"
        android:layout_marginTop="55dp"
        app:button_text="@string/passkey_authenticate_confirm"
        app:text_color="@color/text_color_primary_opposite"
        app:text_size="@dimen/text_secondary_size"
        app:text_bold="true"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/authenticate_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="icon_faceid,last_step,authenticate"
        android:visibility="invisible"
        />
    
    <View
        android:id="@+id/progress_bg"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:background="@drawable/login_progress_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:indeterminateTint="@color/white"
        app:layout_constraintTop_toTopOf="@id/progress_bg"
        app:layout_constraintBottom_toBottomOf="@id/progress_bg"
        app:layout_constraintStart_toStartOf="@id/progress_bg"
        app:layout_constraintEnd_toEndOf="@id/progress_bg"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/progress_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="progress_bar,progress_bg"
        />

</androidx.constraintlayout.widget.ConstraintLayout>