<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/network_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_secondary_size"
        android:textColor="@color/secondary_text_color"
        android:text="@string/event_detail_claim_w3st_network"
        app:layout_constraintTop_toBottomOf="@id/action_bar"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/page_general_padding"
        />

    <TextView
        android:id="@+id/network"
        android:layout_width="0dp"
        android:layout_height="@dimen/big_button_height"
        android:background="@drawable/rounded_corner_bg"
        android:textSize="@dimen/text_primary_size"
        android:textColor="@color/primary_text_color"
        android:text="Cyber"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/network_title"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/network_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/page_general_padding"
        android:paddingStart="12dp"
        android:drawableStart="@drawable/cyber_chain"
        android:drawablePadding="4dp"
        />

    <TextView
        android:id="@+id/address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_secondary_size"
        android:textColor="@color/secondary_text_color"
        android:text="@string/address"
        app:layout_constraintTop_toBottomOf="@id/network"
        android:layout_marginTop="@dimen/page_general_padding"
        app:layout_constraintStart_toStartOf="@id/network_title"
        />

    <EditText
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:background="@drawable/rounded_corner_bg"
        android:textSize="@dimen/text_primary_size"
        android:textColor="@color/primary_text_color"
        app:layout_constraintTop_toBottomOf="@id/address_title"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:paddingEnd="40dp"
        android:hint="Enter address"
        android:textColorHint="@color/secondary_text_color"
        app:layout_constraintStart_toStartOf="@id/network"
        app:layout_constraintEnd_toEndOf="@id/network"
        android:singleLine="true"
        />

    <ImageView
        android:id="@+id/scan"
        android:layout_width="@dimen/back_icon_size"
        android:layout_height="@dimen/back_icon_size"
        android:src="@drawable/icon_scan"
        app:layout_constraintTop_toTopOf="@id/address"
        app:layout_constraintBottom_toBottomOf="@id/address"
        app:layout_constraintEnd_toEndOf="@id/address"
        android:layout_marginEnd="12dp"
        />

    <TextView
        android:id="@+id/amount_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_secondary_size"
        android:textColor="@color/secondary_text_color"
        android:text="@string/amount"
        app:layout_constraintTop_toBottomOf="@id/address"
        android:layout_marginTop="@dimen/page_general_padding"
        app:layout_constraintStart_toStartOf="@id/network_title"
        />

    <EditText
        android:id="@+id/amount"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:background="@drawable/rounded_corner_bg"
        android:textSize="@dimen/text_primary_size"
        android:textColor="@color/primary_text_color"
        app:layout_constraintTop_toBottomOf="@id/amount_title"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:paddingEnd="72dp"
        android:hint="@string/amount_hint"
        android:textColorHint="@color/secondary_text_color"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@id/network"
        app:layout_constraintEnd_toEndOf="@id/network"
        />

    <TextView
        android:id="@+id/token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_primary_size"
        android:textColor="@color/secondary_text_color"
        android:text="@string/eth"
        app:layout_constraintTop_toTopOf="@id/amount"
        app:layout_constraintBottom_toBottomOf="@id/amount"
        app:layout_constraintEnd_toEndOf="@id/amount"
        android:layout_marginEnd="12dp"
        />

    <View
        android:background="@color/border_300"
        android:layout_width="1dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="@id/amount"
        app:layout_constraintBottom_toBottomOf="@id/amount"
        app:layout_constraintEnd_toStartOf="@id/token"
        android:layout_marginEnd="12dp"
        />

    <com.cyberconnect.link3.ui.LoadingButton
        android:id="@+id/send"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_height"
        android:background="@drawable/action_button_bg"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/page_general_padding"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/page_general_padding"
        app:layout_constraintTop_toBottomOf="@id/amount"
        android:layout_marginTop="24dp"
        app:button_text="Send"
        app:text_color="@color/action_button_text_color"
        app:text_size="@dimen/text_primary_size"
        app:text_bold="true"
        />

</androidx.constraintlayout.widget.ConstraintLayout>